# NuMPI

./: .gitignore  CHANGELOG.md  ChangeLog.md  MPI_STUB_ROADMAP.md  NEXT_STEPS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
NuMPI/: MPIStub.py  __init__.py
NuMPI/IO/: NPY.py  common.py
NuMPI/Optimization/: BoundedLBFGS.py  BoundedTRNewtonCG.py  CCGWithRestart.py  CCGWithoutRestart.py  LBFGS.py  LinearConstraint.py  ProjectedLBFGS.py  __init__.py  _lbfgs_helpers.py
NuMPI/Tools/: Reduction.py
test/: test_mpi_stub.py
test/IO/: conftest.py  fixtures.py  test_io.py  utils.py
test/Optimization/: MPIMinimizationProblems.py  MinimizationProblems.py  test_bounded_lbfgs.py  test_bounded_tr_newton.py  test_ccg_restart.py  test_cg.py  test_lbfgs_interface.py  test_linear_constraint.py  test_minimization_problems.py  test_mpi_lbfgs.py  test_projected_lbfgs.py  test_serial_lbfgs.py
