[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "NuMPI"
description = "Numerical tools for MPI-parallelized code"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Antoine Sanner", email = "antoine.sanner@imtek.uni-freiburg.de" },
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
requires-python = ">=3.8.0"
dynamic = ["version"]
dependencies = [
    "scipy>1.1.0",
    "primefac"
]

[project.optional-dependencies]
mpi = [
    "mpi4py"
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/IMTEK-Simulation/NuMPI"
changelog = "https://github.com/IMTEK-Simulation/NuMPI/blob/master/ChangeLog.md"

[tool.coverage.run]
source = ["NuMPI"]
# parallel mode writes a uniquely-named data file per process, so coverage
# from every MPI rank (and every `mpirun -n N` invocation) is preserved and
# merged with `coverage combine` rather than clobbered.
parallel = true
omit = ["NuMPI/_version.py"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "NuMPI/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["NuMPI"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/venv",
    "/.venv",
    "/build",
    "/examples",
    "/maintenance",
]
